# MaterialFiles

./: README.md  build.gradle  gradle.properties
.github/: dependabot.yml
.github/workflows/: Sora-Editor.yml  android.yml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/me/zhanghai/android/files/about/: AboutFragment.kt
app/src/main/java/me/zhanghai/android/files/app/: AppInitializers.kt
app/src/main/java/me/zhanghai/android/files/file/: MimeTypeConversionExtensions.kt  MimeTypeIcon.kt  MimeTypeTypeExtensions.kt
app/src/main/java/me/zhanghai/android/files/filelist/: FileListAdapter.kt  FileListFragment.kt  FileListViewModel.kt
app/src/main/java/me/zhanghai/android/files/provider/common/: PollingWatchService.kt
app/src/main/java/me/zhanghai/android/files/provider/root/: LibSuFileServiceLauncher.kt  SuiFileServiceLauncher.kt
app/src/main/java/me/zhanghai/android/files/settings/: Settings.kt
app/src/main/java/me/zhanghai/android/files/viewer/text/: SoraEditorFragment.kt  TextEditorActivity.kt
app/src/main/res/values/: dimens.xml  donottranslate_prefs.xml  strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: settings.xml
fastlane/metadata/android/en-US/changelogs/: 32.txt  33.txt
gradle/wrapper/: gradle-wrapper.properties
utils/: import-translations.sh
